<resources>
    <string name="app_name">ShirazGard</string>
    <string name="the_best_places_to_explore">The Best Places to Explore</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="just_register_to_get_started">Just register to get started!</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">forget password</string>
    <string name="do_you_have_account_register">Do you have an account? Login</string>
    <string name="firstName">ّFirst Name</string>
    <string name="lastName">Last Name</string>
    <string name="fullname">Full name</string>
    <string name="username">username</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="setting">Setting</string>
    <string name="welcome">Welcome</string>
    <string name="click_start_to_begin">Click start to begin</string>
    <string name="start">Start</string>
    <string name="shiraz_weather_now">-Shiraz weather now</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="atms">ATMs</string>
    <string name="hotels">Hotels</string>
    <string name="hospitals">Hospitals</string>
    <string name="restaurant">Restaurant</string>
    <string name="restaurants">Restaurants</string>
    <string name="wcs">WCs</string>
    <string name="parkings">Parking lots</string>
    <string name="show_on_map">Show on map</string>
    <string name="showOnApp">Show on app</string>
    <string name="mosques">Mosques</string>
    <string name="museums">Museums</string>
    <string name="gas_stations">Gas stations</string>
    <string name="car_washes">Car washes</string>
    <string name="cultural_sites">Cultural Sites</string>
    <string name="historical_sites">Historical Sites</string>
    <string name="favoritePlacesText">Don\'t forget to visit these places!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">general</string>
    <string name="account">account</string>
    <string name="about_us">about us</string>
    <string name="lang">language</string>
    <string name="theme">theme</string>
    <string name="change_password">change password</string>
    <string name="logout">logout</string>
    <string name="delete_account">delete account</string>
    <string name="version">version</string>
    <string name="contact_with_developer">contact with developer</string>
    <string name="choose_lang">Choose your language</string>
    <string name="choose_theme">Choose your theme</string>
    <string name="dark">dark</string>
    <string name="light">light</string>
    <string name="system">system</string>
    <string name="at_least_one_special_char"><![CDATA[- at least one special character (!@#$%^&*)]]></string>
    <string name="edit_password">Change password</string>
    <string name="password_rules">The password must include the following:</string>
    <string name="at_least_eight_char">- At least 8 characters</string>
    <string name="at_least_one_uppercase_char">- At least one capital letter.</string>
    <string name="at_least_one_lowercase_char">- At least one small letter.</string>
    <string name="at_least_one_num">- At least one number</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="current_password_incorrect">Current password is incorrect</string>
    <string name="password_is_not_valid">Password is not valid</string>
    <string name="new_password_dont_match_repeated_password">The new password and its repetition do not match</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure_delete_account">Are you sure you want to delete account?</string>
    <string name="account_deleted_successfuly">Account deleted successfuly</string>
    <string name="upload_photo">Upload photo</string>
    <string name="delete_photo">delete photo</string>
    <string name="save_changes">Save changes</string>
    <string name="username_not_found">Username not found</string>
    <string name="password_is_incorrect">The password is incorrect</string>
    <string name="password_changed">Password changed</string>
    <string name="password_dont_changed">Password don\'t changed</string>
    <string name="no_internet">No Internet</string>
    <string name="check_internet">Please check your internet status and try again</string>
    <string name="try_again">Try again</string>
    <string name="add_new_comment">Add new comment</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="rating">Rating</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="open_in_map">Open in navigator</string>
    <string name="no_description">There are no description.</string>
    <string name="banks">Banks</string>
    <string name="search_prompt">Search for places in Shiraz</string>
    <string name="no_results_found">No results found for your search</string>
    <string name="app_version">Version 1.0</string>
    <string name="connection_problem">Connection problem</string>
    <string name="need_vpn">You may need to enable a VPN to access weather information.</string>
    <string name="vpn_setting">VPN setting</string>
    <string name="retry">Retry</string>
</resources>
